sched events spacing, fixed home sched overlap and adjusted fonts

--- a/src/style/pages/_home.scss
+++ b/src/style/pages/_home.scss
@@ -392,6 +392,10 @@ h3 {
         }
 
         .day-info {    
+            h2 {
+                font-family: $header-font;
+                font-size: 2.15rem;
+            }
             h4 {
                 font-family: $small-header;
                 font-size: 1.4rem;
@@ -410,7 +414,7 @@ h3 {
             .loc {
                 font-family: $small-header;     
                 color: $accent-3;
-                font-size: 1.9rem;
+                font-size: 1.5rem;
                 text-transform: uppercase;
                 font-style: normal;
             }
