--- a/src/style/pages/_schedule.scss
+++ b/src/style/pages/_schedule.scss
@@ -3,70 +3,53 @@
         display: flex;
         justify-content: space-between;
         font-family: $body-font;
+        flex-wrap: wrap;
 
-        .content {
-            width: 100%;
-            // flex-direction: column;
-        }
         .row {
             margin-right: 15px;
             margin-left: 15px;
+            
+            .content {
+                width: 100%;
+                
+                .day {
+                    display: flex;
+                    align-items: flex-start;
 
-            // for Day 1, Day 2 etc.
-            .planet {
-              transform: scaleY(-1); // Flips into correct orientation
-              float: left;
-              margin-right: 10px;
-              margin-top: 8px;
-            }
+                    // for Day 1, Day 2 etc.
+                    .planet {
+                        transform: scaleY(-1); // Flips into correct orientation
+                        object-fit: contain;
+                    }
 
-            h1 {
-                padding-left: 0px;
-                font-size: 3rem;
-                white-space: nowrap;
-                margin-bottom: 0;
-            }
+                    & > .content {                
+                        h1 {
+                            padding-left: 0px;
+                            font-size: 3rem;
+                            margin-bottom: 0;
+                        }
 
-            h4 {
-                color: $accent-2;
-                // translate: 152px;
-            }
+                        h4 {
+                            color: $accent-2;
+                        }
 
-            h4, span {
-                font-size: 1.7rem;
-                font-family: $header-font;
-            }
+                        h4, span {
+                            font-size: 1.7rem;
+                            font-family: $header-font;
+                        }
+                    }
 
-            .location {
-              display: flex;
-            //   translate: 152px;
-              margin-bottom: 30px;
-            }
+                    .location {
+                        display: flex;
+                        margin-bottom: 30px;
+                    }
 
-            #cssa {
-              font-style: italic;
-              font-family: $body-font;
-            }
+                    #cssa {
+                        font-style: italic;
+                        font-family: $body-font;
+                    }
 
-            .day-info {
-                // display: flex;
-                // flex-direction: column;
-                // width: 100%;
-
-                // h2, h4 {
-                //     font-family: $body-font;
-                //     font-size: 1.2rem;
-                //     // translate: 152px;
-                //     margin-bottom: -25px;
-                // }
-
-                // h4 {
-                //     font-style: oblique;
-                //     font-weight: bold;
-                //     color: $accent-1;
-                //     // translate: 710px;
-                // }
-                    display: inherit;
+                }
             }
         }
 
